Dev_mythip@capgemini.com_17Dec_ForGitSync/src/objects/Position__c.object
<CustomObject>
    <fields>
        <fullName>Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver #1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Positions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver #2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Positions2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver #3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Positions3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_closed__c</fullName>
        <label>Date closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_opened__c</fullName>
        <label>Date opened</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Days_Opened__c</fullName>
        <formula>IF( ISPICKVAL( status__c ,&quot;Open&quot;) , ROUND( NOW() - Date_opened__c ,0), ROUND(Date_closed__c -Date_opened__c,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Opened</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <label>Education</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hiring_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hiring Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Positions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Job_Description__c</fullName>
        <label>Job Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Legacy_Positon_Number__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Positon Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <picklist>
            <controllingField>Department__c</controllingField>
            <picklistValues>
                <fullName>San Francisco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New York</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atlanta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>England</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Max_Pay__c</fullName>
        <label>Max Pay</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Pay__c</fullName>
        <label>Min Pay</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_of_Interviewers__c</fullName>
        <label>Number of Interviewers</label>
        <summaryForeignKey>Interviewer__c.Position__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_positions__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of positions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Operating_system__c</fullName>
        <label>Operating systems</label>
        <picklist>
            <picklistValues>
                <fullName>Windows</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Linux</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mac</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Pay_Grade__c</fullName>
        <label>Pay Grade</label>
        <picklist>
            <controllingField>Department__c</controllingField>
            <picklistValues>
                <fullName>C-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT-400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACT-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACT-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACT-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACT-400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENG-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENG-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENG-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENG-400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S-400</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Position</label>
        <referenceTo>Position__c</referenceTo>
        <relationshipLabel>Positions</relationshipLabel>
        <relationshipName>Positions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Programming_Languages__c</fullName>
        <label>Programming Languages</label>
        <picklist>
            <picklistValues>
                <fullName>Java</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C++</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COBOL</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Responsibilities__c</fullName>
        <label>Responsibilities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Skills_Required__c</fullName>
        <label>Skills Required</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sub_Status__c</fullName>
        <label>Sub-Status</label>
        <picklist>
            <controllingField>status__c</controllingField>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Filled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Part time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temp</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Position</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Reruiter_Queue</fullName>
        <columns>NAME</columns>
        <filterScope>Queue</filterScope>
        <label>Reruiter Queue</label>
        <language>en_US</language>
        <queue>ReruiterQueue</queue>
    </listViews>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Positions</pluralLabel>
    <recordTypes>
        <fullName>Approved_Non_Technical_Position</fullName>
        <active>true</active>
        <description>this ll b used for  non tech position once they ve been approved</description>
        <label>Approved Non Technical Position</label>
    </recordTypes>
    <recordTypes>
        <fullName>Approved_Technical_Position</fullName>
        <active>false</active>
        <description>this s for approved technical position</description>
        <label>Approved Technical Position</label>
    </recordTypes>
    <recordTypes>
        <fullName>Non_Technical_Position</fullName>
        <active>true</active>
        <description>for non tech positions</description>
        <label>Non Technical Position</label>
    </recordTypes>
    <recordTypes>
        <fullName>Technical_Bookm</fullName>
        <active>false</active>
        <label>Technical Book</label>
    </recordTypes>
    <recordTypes>
        <fullName>Technical_Position</fullName>
        <active>true</active>
        <description>for tech positions</description>
        <label>Technical Position</label>
    </recordTypes>
    <recordTypes>
        <fullName>aa</fullName>
        <active>true</active>
        <label>aa</label>
    </recordTypes>
    <recordTypes>
        <fullName>gfjgjh</fullName>
        <active>false</active>
        <label>gfj</label>
    </recordTypes>
    <recordTypes>
        <fullName>kk</fullName>
        <active>true</active>
        <label>kk</label>
    </recordTypes>
    <recordTypes>
        <fullName>yhj</fullName>
        <active>true</active>
        <label>yhj</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Approved_Position__c</fullName>
        <label>Approved Position</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Approver__c</fullName>
        <label>Approver</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Hiring_Manager__c</fullName>
        <label>Hiring Manager</label>
    </sharingReasons>
    <validationRules>
        <fullName>Hiring_manager_required</fullName>
        <active>true</active>
        <errorConditionFormula>LEN( Hiring_Manager__c )=0</errorConditionFormula>
        <errorDisplayField>Hiring_Manager__c</errorDisplayField>
        <errorMessage>Fill hiring manager</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Temp_position_validation</fullName>
        <active>true</active>
        <description>temp position require value</description>
        <errorConditionFormula>ISPICKVAL( Type__c ,&quot;Temp&quot;) &amp;&amp;( NULLVALUE( Duration__c ,0) &lt;=0  ||  Duration__c &gt;365)</errorConditionFormula>
        <errorDisplayField>Duration__c</errorDisplayField>
        <errorMessage>Temp positions require a value between 1 and 365</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>filled_positions_need_valid_start_date</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Sub_Status__c ,&quot;Filled&quot;) &amp;&amp;   ( ISNULL( Start_Date__c )   ||  Start_Date__c &lt; DATEVALUE( Date_closed__c )  )</errorConditionFormula>
        <errorMessage>fill valid  date</errorMessage>
    </validationRules>
</CustomObject>